--- a/index.html
+++ b/index.html
@@ -10,37 +10,33 @@
     
 </head>
 <body>
-
-    <header class="navbar">
-    <div class="nav-left">
-        <div class="nav-profile-container">
-            <div>
-                <img src="assets/images/favicon-32x32.png" alt="Profil"  class="nav-profile-pic"/>
+    <header class="navbar-wrapper">
+        <div class="navbar">
+            <div class="nav-left">
+                <div class="nav-profile-container">
+                    <div>
+                        <img src="assets/images/favicon-32x32.png" alt="Profil"  class="nav-profile-pic"/>
+                    </div>
+                    <div class="nav-status-indicator">
+                        <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="4" cy="4" r="3.5" fill="#40D1AD" stroke="#FDFDFF"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="nav-text-left"><span >Andre Maier</span></div>
+                <div class="nav-section-title" id="current-section">/About</div>
             </div>
-            <div class="nav-status-indicator">
-                <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="4" cy="4" r="3.5" fill="#40D1AD" stroke="#FDFDFF"/>
-                </svg>
-            </div>
+            <nav class="nav-center">
+                <a href="#education" class="nav-link">Ausbildung</a>
+                <a href="#projects" class="nav-link">Projekte</a>
+                <a href="#work-experience" class="nav-link">Praktische Erfahrung</a>
+                <a href="#study" class="nav-link">Studium</a>
+                <a href="#others" class="nav-link">Andere</a>
+                <div class="nav-right">
+                    <img src="assets/images/icon.svg" class="talk-icon" />
+                </div>
+            </nav>
         </div>
-
-
-        <div class="nav-text-left"><span >Andre Maier</span></div>
-        <div class="nav-section-title" id="current-section">/About</div>
-    </div>
-
-    <nav class="nav-center">
-        <a href="#hero" class="nav-link">About</a>
-        <a href="#education" class="nav-link">Ausbildung</a>
-        <a href="#work-experience" class="nav-link">Praktische Erfahrung</a>
-        <a href="#projects" class="nav-link">Projekte</a>
-        <a href="#study" class="nav-link">Studium</a>
-        <a href="#study" class="nav-link">Studium</a>
-    </nav>
-
-    <div class="nav-right">
-        <img src="assets/images/icon.svg" class="talk-icon" />
-    </div>
     </header>
 
     <div id="content">
@@ -112,6 +108,50 @@
                     </div>
             </div>
         </ul>
+        </section>
+
+                <section id="projects">
+            <div id="project-list">
+                <div class="project-tile">
+                    <p class="project-title">Media computer science project</p>
+                    <div class="project-underline"></div>
+                        <p class="project-description">Gruppenarbeit zur Textanalyse und Keyword Extraction mit Java über Apache Sparks Framework und John Snow LABS (NLP), Aufbau einer Pipeline</p>
+                        <div class="tech-stack">
+                            <span class="tag tag--white">Java</span>
+                            <span class="tag tag--blue">Apache Sparks</span>
+                            <span class="tag tag--white">Hadoop</span>
+                            <span class="tag tag--green">NLP</span>
+                        </div>
+                        <div class ="github-code">
+                            <div class="github-icon">
+                                <svg width="30" height="31" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.7583 0.827394C6.69227 0.827394 0.157227 7.56133 0.157227 15.8723C0.157227 22.5201 4.34149 28.1569 10.1423 30.1469C10.8724 30.2846 11.1394 29.8199 11.1394 29.4219C11.1394 29.0647 11.1268 28.1181 11.1185 26.8617C7.0573 27.7717 6.20209 24.8458 6.20209 24.8458C5.5367 23.1075 4.57928 22.6449 4.57928 22.6449C3.25475 21.7112 4.6794 21.7306 4.6794 21.7306C6.14577 21.8381 6.91755 23.2796 6.91755 23.2796C8.21913 25.5816 10.3342 24.9147 11.1665 24.5317C11.2979 23.5593 11.6754 22.8966 12.0926 22.5201C8.85115 22.1415 5.44283 20.8506 5.44283 15.0848C5.44283 13.4433 6.01228 12.0987 6.94466 11.0488C6.79448 10.668 6.29387 9.13832 7.09067 7.06866C7.09067 7.06866 8.313 6.66204 11.1039 8.60907C12.295 8.27436 13.5238 8.10363 14.7583 8.10134C15.9994 8.10779 17.2489 8.27345 18.4149 8.60907C21.2016 6.66204 22.426 7.0665 22.426 7.0665C23.2228 9.13832 22.7222 10.668 22.572 11.0466C23.5065 12.1008 24.0739 13.4433 24.0739 15.0848C24.0739 20.8635 20.6572 22.1372 17.4053 22.5072C17.9289 22.9719 18.3961 23.8906 18.3961 25.2955C18.3961 27.3049 18.3773 28.9271 18.3773 29.4219C18.3773 29.8242 18.6423 30.2911 19.3827 30.1448C22.2871 29.1459 24.8132 27.2302 26.6037 24.6688C28.3942 22.1073 29.3583 19.03 29.3595 15.8723C29.3573 11.8802 27.8178 8.05252 25.0796 5.23113C22.3414 2.40973 18.6288 0.825682 14.7583 0.827394Z" fill="#40D1AD"/>
+                                </svg>
+                            </div>
+                            <p class="code-text">Code</p>
+                        </div>
+                </div>
+
+                <div class="project-tile">
+                    <p class="project-title">Serverless Computing on AWS</p>
+                    <div class="project-underline"></div>
+                            <p class="project-description">Entwicklung einer Fullstack-Webapplikation zur Erfassung von Corona-erkrankten</p>
+                            <div class="tech-stack">
+                                <p class="tag tag--white">Python</p>
+                                <p class="tag tag--blue">React</p>
+                                <p class="tag tag--white">AWS</p>
+                                <p class="tag tag--green">Serverless</p>
+                            </div>
+                        <div class ="github-code">
+                            <div class="github-icon">
+                                <svg width="30" height="31" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.7583 0.827394C6.69227 0.827394 0.157227 7.56133 0.157227 15.8723C0.157227 22.5201 4.34149 28.1569 10.1423 30.1469C10.8724 30.2846 11.1394 29.8199 11.1394 29.4219C11.1394 29.0647 11.1268 28.1181 11.1185 26.8617C7.0573 27.7717 6.20209 24.8458 6.20209 24.8458C5.5367 23.1075 4.57928 22.6449 4.57928 22.6449C3.25475 21.7112 4.6794 21.7306 4.6794 21.7306C6.14577 21.8381 6.91755 23.2796 6.91755 23.2796C8.21913 25.5816 10.3342 24.9147 11.1665 24.5317C11.2979 23.5593 11.6754 22.8966 12.0926 22.5201C8.85115 22.1415 5.44283 20.8506 5.44283 15.0848C5.44283 13.4433 6.01228 12.0987 6.94466 11.0488C6.79448 10.668 6.29387 9.13832 7.09067 7.06866C7.09067 7.06866 8.313 6.66204 11.1039 8.60907C12.295 8.27436 13.5238 8.10363 14.7583 8.10134C15.9994 8.10779 17.2489 8.27345 18.4149 8.60907C21.2016 6.66204 22.426 7.0665 22.426 7.0665C23.2228 9.13832 22.7222 10.668 22.572 11.0466C23.5065 12.1008 24.0739 13.4433 24.0739 15.0848C24.0739 20.8635 20.6572 22.1372 17.4053 22.5072C17.9289 22.9719 18.3961 23.8906 18.3961 25.2955C18.3961 27.3049 18.3773 28.9271 18.3773 29.4219C18.3773 29.8242 18.6423 30.2911 19.3827 30.1448C22.2871 29.1459 24.8132 27.2302 26.6037 24.6688C28.3942 22.1073 29.3583 19.03 29.3595 15.8723C29.3573 11.8802 27.8178 8.05252 25.0796 5.23113C22.3414 2.40973 18.6288 0.825682 14.7583 0.827394Z" fill="#40D1AD"/>
+                                </svg>
+                            </div>
+                            <p class="code-text">Code</p>
+                        </div>
+                </div>
+            </div>
         </section>
 
         <section id="work-experience">
@@ -216,49 +256,7 @@ Codebeamer (application lifecycle management)</p>
             </div>
         </section>
 
-        <section id="projects">
-            <div id="project-list">
-                <div class="project-tile">
-                    <p class="project-title">Media computer science project</p>
-                    <div class="project-underline"></div>
-                        <p class="project-description">Gruppenarbeit zur Textanalyse und Keyword Extraction mit Java über Apache Sparks Framework und John Snow LABS (NLP), Aufbau einer Pipeline</p>
-                        <div class="tech-stack">
-                            <span class="tag tag--white">Java</span>
-                            <span class="tag tag--blue">Apache Sparks</span>
-                            <span class="tag tag--white">Hadoop</span>
-                            <span class="tag tag--green">NLP</span>
-                        </div>
-                        <div class ="github-code">
-                            <div class="github-icon">
-                                <svg width="30" height="31" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.7583 0.827394C6.69227 0.827394 0.157227 7.56133 0.157227 15.8723C0.157227 22.5201 4.34149 28.1569 10.1423 30.1469C10.8724 30.2846 11.1394 29.8199 11.1394 29.4219C11.1394 29.0647 11.1268 28.1181 11.1185 26.8617C7.0573 27.7717 6.20209 24.8458 6.20209 24.8458C5.5367 23.1075 4.57928 22.6449 4.57928 22.6449C3.25475 21.7112 4.6794 21.7306 4.6794 21.7306C6.14577 21.8381 6.91755 23.2796 6.91755 23.2796C8.21913 25.5816 10.3342 24.9147 11.1665 24.5317C11.2979 23.5593 11.6754 22.8966 12.0926 22.5201C8.85115 22.1415 5.44283 20.8506 5.44283 15.0848C5.44283 13.4433 6.01228 12.0987 6.94466 11.0488C6.79448 10.668 6.29387 9.13832 7.09067 7.06866C7.09067 7.06866 8.313 6.66204 11.1039 8.60907C12.295 8.27436 13.5238 8.10363 14.7583 8.10134C15.9994 8.10779 17.2489 8.27345 18.4149 8.60907C21.2016 6.66204 22.426 7.0665 22.426 7.0665C23.2228 9.13832 22.7222 10.668 22.572 11.0466C23.5065 12.1008 24.0739 13.4433 24.0739 15.0848C24.0739 20.8635 20.6572 22.1372 17.4053 22.5072C17.9289 22.9719 18.3961 23.8906 18.3961 25.2955C18.3961 27.3049 18.3773 28.9271 18.3773 29.4219C18.3773 29.8242 18.6423 30.2911 19.3827 30.1448C22.2871 29.1459 24.8132 27.2302 26.6037 24.6688C28.3942 22.1073 29.3583 19.03 29.3595 15.8723C29.3573 11.8802 27.8178 8.05252 25.0796 5.23113C22.3414 2.40973 18.6288 0.825682 14.7583 0.827394Z" fill="#40D1AD"/>
-                                </svg>
-                            </div>
-                            <p class="code-text">Code</p>
-                        </div>
-                </div>
 
-                <div class="project-tile">
-                    <p class="project-title">Serverless Computing on AWS</p>
-                    <div class="project-underline"></div>
-                            <p class="project-description">Entwicklung einer Fullstack-Webapplikation zur Erfassung von Corona-erkrankten</p>
-                            <div class="tech-stack">
-                                <p class="tag tag--white">Python</p>
-                                <p class="tag tag--blue">React</p>
-                                <p class="tag tag--white">AWS</p>
-                                <p class="tag tag--green">Serverless</p>
-                            </div>
-                        <div class ="github-code">
-                            <div class="github-icon">
-                                <svg width="30" height="31" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.7583 0.827394C6.69227 0.827394 0.157227 7.56133 0.157227 15.8723C0.157227 22.5201 4.34149 28.1569 10.1423 30.1469C10.8724 30.2846 11.1394 29.8199 11.1394 29.4219C11.1394 29.0647 11.1268 28.1181 11.1185 26.8617C7.0573 27.7717 6.20209 24.8458 6.20209 24.8458C5.5367 23.1075 4.57928 22.6449 4.57928 22.6449C3.25475 21.7112 4.6794 21.7306 4.6794 21.7306C6.14577 21.8381 6.91755 23.2796 6.91755 23.2796C8.21913 25.5816 10.3342 24.9147 11.1665 24.5317C11.2979 23.5593 11.6754 22.8966 12.0926 22.5201C8.85115 22.1415 5.44283 20.8506 5.44283 15.0848C5.44283 13.4433 6.01228 12.0987 6.94466 11.0488C6.79448 10.668 6.29387 9.13832 7.09067 7.06866C7.09067 7.06866 8.313 6.66204 11.1039 8.60907C12.295 8.27436 13.5238 8.10363 14.7583 8.10134C15.9994 8.10779 17.2489 8.27345 18.4149 8.60907C21.2016 6.66204 22.426 7.0665 22.426 7.0665C23.2228 9.13832 22.7222 10.668 22.572 11.0466C23.5065 12.1008 24.0739 13.4433 24.0739 15.0848C24.0739 20.8635 20.6572 22.1372 17.4053 22.5072C17.9289 22.9719 18.3961 23.8906 18.3961 25.2955C18.3961 27.3049 18.3773 28.9271 18.3773 29.4219C18.3773 29.8242 18.6423 30.2911 19.3827 30.1448C22.2871 29.1459 24.8132 27.2302 26.6037 24.6688C28.3942 22.1073 29.3583 19.03 29.3595 15.8723C29.3573 11.8802 27.8178 8.05252 25.0796 5.23113C22.3414 2.40973 18.6288 0.825682 14.7583 0.827394Z" fill="#40D1AD"/>
-                                </svg>
-                            </div>
-                            <p class="code-text">Code</p>
-                        </div>
-                </div>
-            </div>
-        </section>
 
         <section id="study">
             <div class="study-container">
